# GAS-3

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/actions/: __init__.py  analyze_group_response.py  generate_comment.py  government_intervention.py  quantize_behavior.py
app/compat/: __init__.py  metagpt.py
app/environment/: __init__.py  simulation_env.py
app/roles/: __init__.py  group_agent.py
app/schema/: __init__.py  agent_state.py  news_state.py  simulation.py
app/services/: __init__.py  config.py  dataset_loader.py  dynamics.py  environment_state.py  hierarchy.py  llm.py  persistence.py  runtime_logging.py  sample_data.py
config/: settings.example.yaml
tests/: test_config.py  test_dynamics.py
